[package]
name = "assembler"
version = "0.1.0"
authors = ["Keringar <git@keringar.xyz>"]

[dependencies]
cgmath = "0.14"
gfx_device_gl = "0.14"
gfx_window_glutin = "0.16"
glutin = "0.8"
slog = "2.0"
slog-async = "2.0"
slog-term = "2.0"
specs = "0.8"
bus = "1.3"

[dependencies.gfx]
version = "0.16"
features = ["cgmath-types"]